# open-gto

./: CMakeLists.txt  bootstrap
lib/Gto/: Reader.cpp  Writer.cpp
plugins/python/src/gtoDB/: swig.cpp
